REACT | spretorius | Webpack CSS imports added

--- a/client/public/application.css
+++ b/client/public/application.css
@@ -1,5 +1,10 @@
 
-.transition-opacity {
+.transition-opacity-enter {
 	background: red;
 }
 
+.transition-opacity-leave {
+	background: yellow;
+}
+
+/*# sourceMappingURL=application.css.map*/
