--- a/client/development/stylesheets/configuration/variables.css
+++ b/client/development/stylesheets/configuration/variables.css
@@ -2,29 +2,31 @@
 :root {
 
 	/* Fonts */
-	/*--font-family-body   : Tahoma, Geneva, sans-serif;
+	--font-family-body   : Tahoma, Geneva, sans-serif;
 	--font-family-code   : 'Courier New', Courier, monospace;
-	--font-family-quote  : Georgia, serif;*/
+	--font-family-quote  : Georgia, serif;
 
 	/* Font sizes */
-	/*--font-size-body : 14px;
-	--relative       : 1em;*/
+	--font-size-body : 14px;
 
 	/* Colours */
-	--color-action   : yellow;
-	/*--color-actioned : #a203fe;
+	--color-action   : #3498db;
+	--color-actioned : #a203fe;
 	--color-body     : #333;
 	--color-error    : #f63400;
-	--color-highlight: lighten( --color-action, 35 );
+	--color-highlight: color( var( --color-action ) lightness( 35% ));
 	--color-valid    : #03fe0f;
-	--color-warning  : #fe8b03;*/
+	--color-warning  : #fe8b03;
 
 	/* Media query sizes */
-	/*--mobile-portrait    : 320px;
-	--mobile-landscape   : 480px;
-	--phablet            : 768px;
-	--desktop-small      : 1024px;
-	--desktop-medium     : 1280px;
-	--desktop-large      : 1350px;*/
+	@custom-media --mobile-portrait 	( width >=320px 	);
+	@custom-media --mobile-landscape 	( width >=480px 	);
+	@custom-media --phablet 			( width >=768px 	);
+	@custom-media --desktop-small 		( width >=1024px 	);
+	@custom-media --desktop-medium 		( width >=1280px 	);
+	@custom-media --desktop-large 		( width >=1350px 	);
+
+	/* Custom selectors */
+	@custom-selector :--enter :hover, :focus;
 
 }
