--- a/client/public/application.css
+++ b/client/public/application.css
@@ -106,19 +106,6 @@ nav 		,
 section {
 	display : block;
 }
-:root {
-
-	/* Fonts */
-
-	/* Font sizes */
-
-	/* Colours */
-
-	/* Media query sizes */
-
-	/* Custom selectors */
-
-}
 ::-moz-selection {
 	background 		: rgb(168, 211, 240);
 	color 		: rgb(46, 46, 46);
@@ -155,20 +142,33 @@ html {
 	height 		: 100%;
 	overflow-y 	: scroll;
 }
+:root {
+
+	/* Fonts */
+
+	/* Font sizes */
+
+	/* Colours */
+
+	/* Media query sizes */
+
+	/* Custom selectors */
+
+}
 .button {
 	background-image 		: -webkit-linear-gradient( 
 		top 										, 
-		rgb(191, 191, 191) 	, 
-		rgb(140, 140, 140)
+		rgb(242, 242, 242) 	, 
+		rgb(191, 191, 191)
 	);
 	background-image 		: linear-gradient( 
 		to bottom 										, 
-		rgb(191, 191, 191) 	, 
-		rgb(140, 140, 140)
+		rgb(242, 242, 242) 	, 
+		rgb(191, 191, 191)
 	); 
-	border 		: 1px solid rgb(115, 115, 115);
+	border 		: 1px solid rgb(191, 191, 191);
 	border-radius 				: 3px;
-	box-shadow 		: 0 0 3px 	rgb(128, 128, 128);
+	box-shadow 		: 0 0 3px 	rgb(191, 191, 191);
 	color 		: #333;
 	cursor 						: pointer;
 	display 					: inline-block;
@@ -206,16 +206,16 @@ html {
 .button:focus {
 	background-image 		: -webkit-linear-gradient( 
 			top 										, 
-			rgb(128, 128, 128) 	, 
-			rgb(128, 128, 128)
+			rgb(191, 191, 191) 	, 
+			rgb(191, 191, 191)
 		);
 	background-image 		: linear-gradient( 
 			to bottom 										, 
-			rgb(128, 128, 128) 	, 
-			rgb(128, 128, 128)
+			rgb(191, 191, 191) 	, 
+			rgb(191, 191, 191)
 		);
-	border 		: 1px solid rgb(77, 77, 77);
-	box-shadow 		: 0 0 3px 	rgb(77, 77, 77) inset;
+	border 		: 1px solid rgb(128, 128, 128);
+	box-shadow 		: 0 0 3px 	rgb(128, 128, 128) inset;
 	color 		: #333;
 }
 .button--action 	,
@@ -418,7 +418,7 @@ meter 		,
 progress 	,
 video {
 	margin 	: 0 0 15px;
-	widows 	: 100%;
+	width 	: 100%;
 }
 canvas 	,
 iframe 	,
@@ -437,9 +437,6 @@ iframe {
 }
 meter ,
 progress {
-	-webkit-appearance 	: none;
-	   -moz-appearance 	: none;
-	        appearance 	: none;
 	border      : none;
 	display     : block;
 	font-size   : 10px;
@@ -448,18 +445,18 @@ progress {
 }
 meter {
 }
-meter::meter-bar {
-	background 		: rgb(191, 191, 191);
-	border 		: 1px solid rgb(166, 166, 166);
+meter::-webkit-meter-bar {
+	background 		: rgb(242, 242, 242);
+	border 		: none;
 	border-radius 		: 3px;
-	box-shadow 		: 0 0 2px rgb(166, 166, 166) inset;
+	box-shadow 		: 0 0 3px rgb(191, 191, 191) inset;
 }
-meter::meter-optimum-value,
-	meter::meter-suboptimum-value,
-	meter::meter-even-less-good-value {
+meter::-webkit-meter-optimum-value,
+	meter::-webkit-meter-suboptimum-value,
+	meter::-webkit-meter-even-less-good-value {
 	border-radius 		: 3px;
 }
-meter::meter-optimum-value {
+meter::-webkit-meter-optimum-value {
 	background-image 		: -webkit-linear-gradient( 
 			top 				, 
 			#03fe0f 	, 
@@ -471,7 +468,7 @@ meter::meter-optimum-value {
 			rgb(2, 203, 12)
 		);
 }
-meter::meter-suboptimum-value {
+meter::-webkit-meter-suboptimum-value {
 	background-image 		: -webkit-linear-gradient( 
 			top 				, 
 			#fe8b03 , 
@@ -483,7 +480,7 @@ meter::meter-suboptimum-value {
 			rgb(203, 111, 2)
 		);
 }
-meter::meter-even-less-good-value {
+meter::-webkit-meter-even-less-good-value {
 	background-image 		: -webkit-linear-gradient( 
 			top 				, 
 			#f63400 	, 
@@ -495,15 +492,47 @@ meter::meter-even-less-good-value {
 			rgb(197, 42, 0)
 		);
 }
-progress{
-}
-progress::progress-bar {
-	background 		: rgb(191, 191, 191);
-	border 		: 1px solid rgb(166, 166, 166);
+meter::-moz-meter-bar {
+	background 		: rgb(242, 242, 242);
+	border 		: none;
 	border-radius 		: 3px;
-	box-shadow 		: 0 0 2px rgb(166, 166, 166) inset;
+	box-shadow 		: 0 0 3px rgb(191, 191, 191) inset;
 }
-progress::progress-value {
+meter:-moz-meter-optimum::-moz-meter-bar,
+	meter:-moz-meter-sub-optimum::-moz-meter-bar,
+	meter:-moz-meter-sub-sub-optimum::-moz-meter-bar {
+	border-radius 		: 3px;
+}
+meter:-moz-meter-optimum::-moz-meter-bar {
+	background-image 		: linear-gradient( 
+			to bottom 				, 
+			#03fe0f 	, 
+			rgb(2, 203, 12)
+		);
+}
+meter:-moz-meter-sub-optimum::-moz-meter-bar {
+	background-image 		: linear-gradient( 
+			to bottom 				, 
+			#fe8b03 , 
+			rgb(203, 111, 2)
+		);
+}
+meter:-moz-meter-sub-sub-optimum::-moz-meter-bar {
+	background-image 		: linear-gradient( 
+			to bottom 				, 
+			#f63400 	, 
+			rgb(197, 42, 0)
+		);
+}
+progress {
+}
+progress::-webkit-progress-bar {
+	background 		: rgb(242, 242, 242);
+	border 		: none;
+	border-radius 		: 3px;
+	box-shadow 		: 0 0 2px rgb(191, 191, 191) inset;
+}
+progress::-webkit-progress-value {
 	border-radius 		: 3px;
 	background-image 		: -webkit-linear-gradient( 
 			top 				, 
@@ -515,6 +544,16 @@ progress::progress-value {
 			#3498db 	, 
 			rgb(42, 122, 175)
 		);
+}
+progress::-moz-progress-bar {
+	border-radius 		: 3px;
+	border 		: none;
+	background-image 		: linear-gradient( 
+			to bottom 				, 
+			#3498db 	, 
+			rgb(42, 122, 175)
+		);
+	box-shadow 		: 0 0 2px rgb(191, 191, 191) inset;
 }
 svg {
 	margin: 0 0 15px;
@@ -585,13 +624,13 @@ input::placeholder, textarea::placeholder {
 }
 input {
 }
-input::inner-spin-button,
-	input::outer-spin-button,
-	input::clear-button,
-	input::calendar-picker-indicator {
+input::-webkit-inner-spin-button,
+	input::-webkit-outer-spin-button,
+	input::-webkit-clear-button,
+	input::-webkit-calendar-picker-indicator {
 	display 		: none;
 }
-input::clear {
+input::-ms-clear {
 	display 		: none;
 }
 input[ type="checkbox" 	] ,
@@ -626,10 +665,15 @@ input[ type="color" ] {
 	padding : 2px 0;
 	width 	: 25px
 }
-input[ type="color" ]::color-swatch-wrapper {
+input[ type="color" ]::-webkit-color-swatch-wrapper {
 	padding 		: 1px 3px;
 }
-input[ type="color" ]::color-swatch {
+input[ type="color" ]::-moz-color-swatch {
+	border 		: 1px solid rgb(44, 129, 186);
+	border-radius 		: 3px;
+	box-shadow 		: 0 0 3px 	rgb(47, 137, 197) inset;
+}
+input[ type="color" ]::-webkit-color-swatch {
 	border 		: 1px solid rgb(44, 129, 186);
 	border-radius 		: 3px;
 	box-shadow 		: 0 0 3px 	rgb(47, 137, 197) inset;
@@ -649,83 +693,79 @@ input[ type="range" ] {
 	margin 		: 10px 0;
 	padding 	: 0;
 	width 		: 100%
-
-	/*&::-ms-track {
-		background      : none;
-		border          : none;
-		color           : transparent;
-		cursor          : pointer;
-		height          : 45px;
-		animate         : 0.2s;
-		width           : 100%;
-	}
-
-	&::-ms-thumb {
-		background          : color( var( --color-body ) lightness( 65% ));
-		box-shadow          : 0 0 3px color( var( --color-body ) lightness( 65% ));
-		border              : 1px solid color( var( --color-body ) lightness( 50% ));
-		border-radius       : 3px;
-		cursor              : pointer;
-		height              : 40px;
-		width               : 15px;
-	}
-
-	&::-ms-fill-lower,
-	&::-ms-fill-upper {
-		background          : color( var( --color-body ) lightness( 75% ));
-		box-shadow          : 0 0 3px color( var( --color-body ) lightness( 65% )) inset;
-		border              : 1px solid color( var( --color-body ) lightness( 65% ));
-		border-radius       : 3px;
-		height              : 15px;
-	}*/
 }
 input[ type="range" ]:focus {
 	outline 		: none;
 }
-input[ type="range" ]::slider-runnable-track {
-	background 		: rgb(191, 191, 191);
-	border 		: 1px solid rgb(166, 166, 166);
+input[ type="range" ]::-webkit-slider-runnable-track {
+	animate 		: 0.2s;
+	background 		: rgb(242, 242, 242);
+	border 		: 1px solid rgb(191, 191, 191);
 	border-radius 		: 3px;
-	box-shadow 		: 0 0 3px rgb(166, 166, 166) inset;
+	box-shadow 		: 0 0 3px rgb(191, 191, 191) inset;
 	cursor 		: pointer;
 	height 		: 15px;
-	animate 		: 0.2s;
 	width 		: 100%;
 }
-input[ type="range" ]::slider-thumb {
+input[ type="range" ]::-webkit-slider-thumb {
 	-webkit-appearance 		: none;
-	   -moz-appearance 		: none;
 	        appearance 		: none;
-	background 		: rgb(166, 166, 166);
-	box-shadow 		: 0 0 3px rgb(166, 166, 166);
-	border 		: 1px solid rgb(128, 128, 128);
+	background 		: rgb(242, 242, 242);
+	border 		: 1px solid rgb(191, 191, 191);
 	border-radius 		: 3px;
+	box-shadow 		: 0 0 3px rgb(191, 191, 191);
 	cursor 		: pointer;
 	height 		: 40px;
 	margin-top 		: -14px;
 	width 		: 15px;
 }
-input[ type="range" ]::focus-outer {
+input[ type="range" ]::-moz-focus-outer {
 	border 		: none;
 }
-input[ type="range" ]::range-track {
+input[ type="range" ]::-moz-range-track {
 	animate 		: 0.2s;
-	background 		: rgb(191, 191, 191);
-	border 		: 1px solid rgb(166, 166, 166);
+	background 		: rgb(242, 242, 242);
+	border 		: 1px solid rgb(191, 191, 191);
 	border-radius 		: 3px;
-	box-shadow 		: 0 0 3px rgb(166, 166, 166) inset;
+	box-shadow 		: 0 0 3px rgb(191, 191, 191) inset;
 	cursor 		: pointer;
 	height 		: 15px;
 	width 		: 100%;
 }
-input[ type="range" ]::range-thumb {
-	background 		: rgb(166, 166, 166);
-	box-shadow 		: 0 0 3px rgb(166, 166, 166);
-	border 		: 1px solid rgb(128, 128, 128);
+input[ type="range" ]::-moz-range-thumb {
+	background 		: rgb(242, 242, 242);
+	border 		: 1px solid rgb(191, 191, 191);
 	border-radius 		: 3px;
+	box-shadow 		: 0 0 3px rgb(191, 191, 191);
 	cursor 		: pointer;
 	height 		: 40px;
 	width 		: 15px;
+}
+input[ type="range" ]::-ms-track {
+	animate 		: 0.2s;
+	background 		: none;
+	border 		: none;
+	color 		: transparent;
+	cursor 		: pointer;
+	height 		: 45px;
+	width 		: 100%;
+}
+input[ type="range" ]::-ms-thumb {
+	background 		: rgb(242, 242, 242);
+	border 		: 1px solid rgb(191, 191, 191);
+	border-radius 		: 3px;
+	box-shadow 		: 0 0 3px rgb(191, 191, 191);
+	cursor 		: pointer;
+	height 		: 40px;
+	width 		: 15px;
+}
+input[ type="range" ]::-ms-fill-lower,
+	input[ type="range" ]::-ms-fill-upper {
+	background 		: rgb(242, 242, 242);
+	border 		: 1px solid rgb(191, 191, 191);
+	border-radius 		: 3px;
+	box-shadow 		: 0 0 3px rgb(191, 191, 191) inset;
+	height 		: 15px;
 }
 label {
 	color 		: #333;
@@ -759,21 +799,20 @@ textarea {
 .form__submit-row {
 	margin : 0 0 10px;
 }
-/*.form__submit-row {
-
-	ul {
-		list-style  : none;
-		margin      : 0;
+.form__submit-row {
+}
+.form__submit-row ul {
+	list-style 		: none;
+	margin 		: 0;
+}
+.form__submit-row li {
+	margin 		: 0;
+}
+@media	(min-width: 480px) {
+	.form__submit-row li {
+		display 		: inline;
 	}
-
-	li {
-		margin      : 0;
-
-		@include media( mobile-landscape ) {
-			display : inline;
-		}
-	}
-}*/
+}
 .form__row--disabled {
 	opacity : 0.4;
 }
@@ -1150,34 +1189,33 @@ th {
 	}
 	}
 th {
-	background 		: rgb(242, 242, 242);
+	background 		: rgb(230, 230, 230);
 	font-weight : 400;
 }
-/*tbody ,
+tbody ,
 tfoot {
-	
-	& td {
-		background : none;
-	}
 }
-
+tbody td,
+	tbody th,
+	tfoot td,
+	tfoot th {
+	background 		: none;
+}
 thead {
-
-	& td {
-		border-bottom-color : color( var( --color-body ) lightness( 75% ));
-	}
 }
-
-tbody {
-
-	& tr {
-		transition : background , 0.25s , ease-in-out;
-
-		&:nth-child( 2n ) {
-			background : color( var( --color-body ) lightness( 90% ));
-		}
-	}
-}*/
+thead th {
+	border-bottom-color 		: rgb(166, 166, 166);
+}
+tr {
+	-webkit-transition 		: background , 0.25s , ease-in-out;
+	transition : background , 0.25s , ease-in-out
+}
+tr:nth-child( 2n ) {
+	background 		: rgb(230, 230, 230);
+}
+tr:hover {
+	background 		: rgb(233, 244, 251);
+}
 abbr[ title ] ,
 dfn[ title ] {
 	border-bottom 		: 1px dotted #333;
