--- a/client/development/stylesheets/utilities/loader.css
+++ b/client/development/stylesheets/utilities/loader.css
@@ -5,7 +5,7 @@
 }
 
 .loader__signal {
-	background 	: 0 0 url( '/images/presentation/loader-small.gif' ) no-repeat;
+	background 	: 0 0 url( '../../images/presentation/loader-small.gif' ) no-repeat;
 	height 		: 32px;
 	left 		: 50%;
 	margin 		: -16px 0 0 -16px;
