REACT | spretorius | - Updated to Webpack 2

--- a/client/development/stylesheets/application.css
+++ b/client/development/stylesheets/application.css
@@ -1,6 +1,6 @@
 
-@import 'basic/reset';
-@import 'basic/base';
+@import 'foundation/reset';
+@import 'foundation/base';
 @import 'controls/buttons';
 @import 'controls/embed';
 @import 'controls/forms';
