REACT | spretorius | - Added file-loader for CSS images

--- a/client/development/components/container/data-visualisation.css
+++ b/client/development/components/container/data-visualisation.css
@@ -8,7 +8,7 @@
 }
 
 .data-visualisation--loading {
-	background-image 	: url( '/images/presentation/loader-small.gif' );
+	background-image 	: url( '../../images/presentation/loader-small.gif' );
 	background-repeat 	: no-repeat;
 	background-position : center center;
 }
